--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -481,7 +481,7 @@
                     </i>
                 </span>
                 <span class="reprint-info">
-                    <a href="https://cupixel.gitee.io/hello-world/">https://cupixel.gitee.io/hello-world/</a>
+                    <a href="https://cupixel.pages.dev/hello-world/">https://cupixel.pages.dev/hello-world/</a>
                 </span>
             </div>
             <div class="reprint__notice">
